--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
         targetSdkVersion 24
         versionCode 4
         versionName "1.1.1"
+
+        manifestPlaceholders = [onesignal_app_id: "657e1b21-8388-425a-82f5-6f6ee1d247e5",
+                                onesignal_google_project_number: "406176751256"]
     }
     buildTypes {
         release {
@@ -24,4 +27,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
+
+
+    compile 'com.onesignal:OneSignal:3.3.0@aar'
+    compile 'com.google.android.gms:play-services-gcm:9.2.1'
 }
