--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
 
     compile 'com.onesignal:OneSignal:3.3.0@aar'
     compile 'com.google.android.gms:play-services-gcm:9.2.1'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
 }
