--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
 
     compile 'com.onesignal:OneSignal:3.3.0@aar'
     compile 'com.google.android.gms:play-services-gcm:10.2.1'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
 }
