--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,6 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -34,7 +33,9 @@ dependencies {
     compile 'com.android.support:design:25.4.0'
     compile 'de.codecrafters.tableview:tableview:2.8.0'
     compile 'com.anjlab.android.iab.v3:library:1.0.44'
+    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
     implementation "ch.acra:acra-http:5.0.2"
+    implementation 'com.karumi:dexter:4.2.0'
 
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
