--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,9 +13,9 @@ android {
     defaultConfig {
         applicationId "pl.pzienowicz.zditmszczecinlive"
         minSdkVersion 15
-        targetSdkVersion 25
-        versionCode 31
-        versionName "1.10.3"
+        targetSdkVersion 27
+        versionCode 32
+        versionName "1.11.0"
 
         manifestPlaceholders = [onesignal_app_id: "657e1b21-8388-425a-82f5-6f6ee1d247e5",
                                 onesignal_google_project_number: "406176751256"]
@@ -50,7 +50,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-gcm:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'org.jsoup:jsoup:1.11.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
