--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "pl.pzienowicz.zditmszczecinlive"
         minSdkVersion 15
         targetSdkVersion 29
-        versionCode 45
-        versionName "1.13.1"
+        versionCode 46
+        versionName "1.13.2"
 
         manifestPlaceholders = [onesignal_app_id: "657e1b21-8388-425a-82f5-6f6ee1d247e5",
                                 onesignal_google_project_number: "406176751256"]
@@ -40,21 +40,18 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
     implementation "ch.acra:acra-http:5.7.0"
     implementation 'com.karumi:dexter:4.2.0'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.onesignal:OneSignal:3.8.4@aar'
-    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
-    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.onesignal:OneSignal:3.15.7@aar'
+    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'org.jsoup:jsoup:1.11.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-}
-repositories {
-    mavenCentral()
-    google()
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 }
