--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme"
         android:name=".MyApplication">
 
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +26,9 @@
 
         <activity android:name=".activity.WidgetsActivity" android:label="@string/widgets"/>
 
-        <receiver android:name=".widget.WidgetProvider" android:label="@string/app_name">
+        <receiver android:name=".widget.WidgetProvider"
+            android:exported="false"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.appwidget.action.APPWIDGET_ENABLED" />
