--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "pl.pzienowicz.zditmszczecinlive"
         minSdkVersion 15
         targetSdkVersion 30
-        versionCode 49
-        versionName "1.14.1"
+        versionCode 50
+        versionName "1.14.2"
     }
     buildTypes {
         release {
@@ -38,7 +38,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
 
     implementation 'de.codecrafters.tableview:tableview:2.8.0'
-    implementation 'com.anjlab.android.iab.v3:library:1.0.44'
+    implementation 'com.android.billingclient:billing-ktx:4.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation "ch.acra:acra-http:5.8.4"
     implementation 'com.karumi:dexter:6.2.3'
