--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "pl.pzienowicz.zditmszczecinlive"
         minSdkVersion 15
         targetSdkVersion 30
-        versionCode 52
-        versionName "1.14.4"
+        versionCode 53
+        versionName "1.15.0"
     }
     buildTypes {
         release {
@@ -42,7 +42,7 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation "ch.acra:acra-http:5.8.4"
     implementation 'com.karumi:dexter:6.2.3'
-    implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -51,6 +51,9 @@ dependencies {
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
 
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
