--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,7 @@
 #Wed May 12 19:39:49 CEST 2021
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
+org.gradle.unsafe.configuration-cache=true
